<resources>
    <string name="app_name">MyNotes</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="enter_pin_text">Enter PIN</string>
    <string name="save">Сохранить</string>
    <string name="delete">Delete</string>
    <string name="enter_new_pin_text">Enter new PIN</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="note_headline">Введите заголовок</string>
    <string name="note_body">Введите заметку</string>
    <string name="has_deadline">Has Deadline</string>
    <string name="have_a_nice_day">Have a nice day))</string>
    <string name="enter_date">Введите дату</string>
    <string name="enter_time">Введите время</string>
    <string name="deadline">deadline: </string>
    <string name="enter_new_pin_here">Вводим сюда)</string>

    <string name="new_password_error">Нужно 4 циферки)</string>
    <string name="new_pin_saved">PIN сохранён!</string>
    <string name="change_pin_title">Меняем парольчик...</string>
    <string name="note_saved_toast">Заметка сохранена)</string>
    <string name="empty_note_warning">Заметка пустая, может, заполнишь?</string>
    <string name="option_change_your_mind">одуматься</string>
    <string name="bye_berlin">прощай, Берлин</string>
    <string name="empty_note_toast">Заметка была пустой, поэтому не была сохранена :(</string>
    <string name="create_note_title">Создаём заметочку)</string>
    <string name="fix_note_title">Редактирование...</string>
    <string name="not_saved_note_warning">Заметка не была сохранена... Сохранить?</string>
    <string name="yep">угусь</string>
    <string name="nope">ноуп</string>
    <string name="notes_title">Заметочки...</string>
    <string name="delete_alert">ну что, удаляем?</string>
    <string name="note_deleted_toast">Заметка удалена!</string>
    <string name="welcome_title">Hello, Mate)</string>
    <string name="wrong_password_warning">А всё, а всё...</string>
    <string name="save_changes_warning">А изменения хоть сохраняем?</string>
    <string name="note_fixed_toast">Заметка изменена!</string>

</resources>