<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".ChangePinActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/change_pin_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/enter_new_pin_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPin"
                android:layout_width="115dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:inputType="numberPassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu"
                tools:ignore="TextFields"
                android:hint="@string/enter_new_pin_here"
                android:gravity="center"
                android:maxLength="4"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/buttonViewPin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/visibility_off" />
    </LinearLayout>

    <Button
        android:id="@+id/saveNewPinButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/save" />

    <TextView
        android:id="@+id/newPinWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu"
        android:textSize="30sp" />

</LinearLayout>